nineth version of the website

--- a/wp/kkr_23/cite.bib
+++ b/wp/kkr_23/cite.bib
@@ -1,6 +1,6 @@
-@article{kai:etal:23,
-  title={The Interplay Between Product Variety and Customer Satisfaction: Theory and Evidence},
+@article{kai:etal:24,
+  title={The Interplay Between Product Variety and Customer Retention: Theory and Evidence},
   author={Kaiser, Ulrich and Kesler, Reinhold and Reisinger, Markus},
   journal={Working Paper},
-  year={2023},
+  year={2024},
 }
